--- a/style.css
+++ b/style.css
@@ -1,23 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&family=Ubuntu:ital,wght@0,400;1,300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&family=Ubuntu:ital,wght@0,400;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
 body{
     background-color: antiquewhite;
 }
 
 *{
-    margin: 0;      /*margin and padding 0 to all the elements on this page*/
+    margin: 0;
     padding: 0;
 }
 
 nav{
-    font-family: 'Ubuntu' , sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
 nav ul{
     display: flex;
-    align-items : center;
+    align-items: center;
     list-style-type: none;
-    height: 60px;
+    height: 65px;
     background-color: black;
     color: white;
 }
@@ -25,13 +25,12 @@ nav ul{
 nav ul li{
     padding: 0 12px;
 }
-
 .brand img{
     width: 44px;
-    padding: 0 8px;  /*padding 0 to top and bottom and 8px to left and right*/
+    padding: 0 8px;
 }
 
-.brand{
+.brand {
     display: flex;
     align-items: center;
     font-weight: bolder;
@@ -39,34 +38,35 @@ nav ul li{
 }
 
 .container{
-    height: 65vh;
+    min-height: 72vh;
     background-color: black;
-    color:white;
-    font-family: 'Varela Round' , sans-serif;
-    display: flex;
-    margin: 20px auto;
-    width: 80%;
-    border-radius: 12px;
-    padding: 34px;
-    background-image: url('bg2.jpg');
+    color: white;
+   font-family: 'Varela Round', sans-serif;
+   display: flex;
+   margin: 23px auto;
+   width: 70%;
+   border-radius: 12px;
+   padding: 34px;
+   background-image: url('bg.jpg');
 }
 
 .bottom{
     position: sticky;
     bottom: 0;
-    height: 88px;
+    height: 130px;
     background-color: black;
     color: white;
-    margin-top: 20px;
     display: flex;
-    justify-items: center;
+    justify-content: center;
     align-items: center;
-    flex-direction: column;
+    flex-direction: column; 
 }
 
 .icons{
-    margin-top: 20px;
-    font-weight: 200;
+    margin-top: 14px; 
+}
+.icons i{
+    cursor: pointer;
 }
 
 #myProgressBar{
@@ -75,13 +75,14 @@ nav ul li{
 }
 
 .songItemContainer{
-    margin-top: 30px;
+    margin-top: 74px;
 }
+
 .songItem{
-    height: 40px;
+    height: 50px;
     display: flex;
     background-color: white;
-    width: 100%;
+    
     color: black;
     margin: 12px 0;
     justify-content: space-between;
@@ -90,7 +91,7 @@ nav ul li{
 }
 
 .songItem img{
-    width: 35px;
+    width: 43px;
     margin: 0 23px;
     border-radius: 34px;
 }
@@ -105,12 +106,17 @@ nav ul li{
 
 .songInfo{
     position: absolute;
-    margin-top: 25px;
-    left: 0;
-    font-family: 'Varela Round' , sans-serif;
+    left: 10vw;
+    font-family: 'Varela Round', sans-serif;
 }
 
 .songInfo img{
     opacity: 0;
     transition: opacity 0.4s ease-in;
 }
+
+@media only screen and (max-width: 1100px) {
+    body {
+      background-color: red;
+    }
+  }
